--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,24 @@ a.blue {
   align-items: center;
 }
 
+.relative{
+  position: relative;
+}
+
+.nav-menu{
+  display: none;
+  position: absolute;
+  top: 30px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
+  border-radius: 2px;
+  width: 150px;
+  padding: 0 5px;
+}
+
+.nav-menu li{
+  padding: 3px 0;
+}
+
 p{
   color: #969799;
   font-size: 14px
