--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,10 @@ a.blue {
 .nav-menu{
   display: none;
   position: absolute;
-  top: 30px;
+  top: 55px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.50);
   border-radius: 2px;
-  width: 150px;
+  width: 180px;
   padding: 0 5px;
 }
 
@@ -138,6 +138,7 @@ ul.right{
 
 nav ul > li{
   margin-right: 20px;
+  padding: 20px 0;
 }
 
 nav li > a,
